update api for multizone

--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -651,7 +651,100 @@ spec:
                   vipSubnet:
                     type: string
                 type: object
+              multiZoneSpec:
+                description: MultiZoneSpec provides details of the configuration of
+                  the zones in the cluster as well as the NetworkTopologyType used.
+                properties:
+                  UserSpecifiedEdgeGatewayConfig:
+                    description: UserSpecifiedEdgeGatewayConfig contains configuration
+                      for UserSpecifiedEdgeGateway zone topology.
+                    properties:
+                      edgeGatewayZone:
+                        description: EdgeGatewayZone defines the name of the user-provided
+                          zone containing an edge gateway.
+                        type: string
+                    required:
+                    - edgeGatewayZone
+                    type: object
+                  ZoneTopology:
+                    description: ZoneTopology defines the type of network topology
+                      used across zones in a Multi-AZ deployment. Valid options are
+                      DCGroup, UserSpecifiedEdgeGateway, and ExternalLoadBalancer,
+                    type: string
+                  dcGroupConfig:
+                    description: DCGroupConfig contains configuration for DCGroup
+                      zone topology.
+                    type: object
+                  externalLoadBalancerConfig:
+                    description: ExternalLoadBalancerConfig contains configuration
+                      for ExternalLoadBalancer zone topology.
+                    properties:
+                      edgeGatewayZones:
+                        description: EdgeGatewayZones defines a list of zones containing
+                          an edge gateway.
+                        items:
+                          description: EdgeGatewayZone provides the details of a zone
+                            containing an edge gateway. Used with ExternalLoadBalancer
+                            topology. topology.
+                          properties:
+                            loadBalancerIP:
+                              description: LoadBalancerIP is the IP address of the
+                                load balancer configured on the edge gateway for this
+                                zone.
+                              type: string
+                            loadBalancerPort:
+                              description: LoadBalancerPort is the port of the load
+                                balancer configured on the edge gateway for this zone.
+                              type: integer
+                            name:
+                              description: Name is the user-defined name of the zone
+                                representing the OVDC containing an edge gateway.
+                              type: string
+                          required:
+                          - loadBalancerIP
+                          - loadBalancerPort
+                          - name
+                          type: object
+                        type: array
+                    required:
+                    - edgeGatewayZones
+                    type: object
+                  zones:
+                    description: Zones defines the list of zones that this cluster
+                      should be deployed to.
+                    items:
+                      description: Zone is an Availability Zone in VCD
+                      properties:
+                        controlPlaneZone:
+                          default: false
+                          description: ControlPlaneZone defines whether a control
+                            plane node can be deployed to this zone.
+                          type: boolean
+                        name:
+                          description: Name defines the name of this zone.
+                          type: string
+                        ovdcName:
+                          description: OVDCName defines the actual name of the OVDC
+                            which corresponds to this zone.
+                          type: string
+                        ovdcNetworkName:
+                          description: OVDCNetworkName defines the OVDC network for
+                            this zone.
+                          type: string
+                      required:
+                      - controlPlaneZone
+                      - name
+                      - ovdcName
+                      - ovdcNetworkName
+                      type: object
+                    type: array
+                type: object
               org:
+                type: string
+              ovcdZoneConfigMap:
+                description: OVDCZoneConfigMap defines the name of a config map storing
+                  the mapping Zone -> OVDC in a Multi-AZ deployment. e.g. zone1 ->
+                  ovdc1, zone2 -> ovdc2
                 type: string
               ovdc:
                 type: string
@@ -700,41 +793,6 @@ spec:
                   username:
                     type: string
                 type: object
-              zoneDetails:
-                description: ZoneDetailsSpec is a detailed summary of the zones in
-                  the cluster as well as the ZoneType used
-                properties:
-                  userSpecifiedEdgeGatewayZone:
-                    type: string
-                  zoneType:
-                    type: string
-                  zones:
-                    items:
-                      description: Zone is an Availability Zone in VCD
-                      properties:
-                        controlPlaneZone:
-                          default: false
-                          type: boolean
-                        loadBalancerIP:
-                          type: string
-                        loadBalancerPort:
-                          type: integer
-                        name:
-                          type: string
-                        ovdcName:
-                          type: string
-                        ovdcNetworkName:
-                          type: string
-                      required:
-                      - controlPlaneZone
-                      - name
-                      - ovdcName
-                      - ovdcNetworkName
-                      type: object
-                    type: array
-                type: object
-              zonesConfigMapName:
-                type: string
             required:
             - org
             - ovdc
@@ -807,7 +865,9 @@ spec:
                         is suitable for use by control plane machines.
                       type: boolean
                   type: object
-                description: FailureDomains is a slice of FailureDomains.
+                description: FailureDomains lists the zones of this cluster. This
+                  field is parsed from the Zones field of vcdCluster.MultiZoneSpec
+                  if set up appropriately.
                 type: object
               infraId:
                 type: string
@@ -821,6 +881,76 @@ spec:
                     type: boolean
                   vipSubnet:
                     type: string
+                type: object
+              multiZoneStatus:
+                description: MultiZoneStatus provides the current status of the multi-zone
+                  configuration in a Multi-AZ deployment
+                properties:
+                  ZoneTopology:
+                    description: ZoneTopology defines the type of network topology
+                      used across zones in a Multi-AZ deployment. Valid options are
+                      DCGroup, UserSpecifiedEdgeGateway, and ExternalLoadBalancer
+                    type: string
+                  edgeGateway:
+                    description: EdgeGateway defines the edge gateway in a UserSpecifiedEdge
+                      topology.
+                    type: string
+                  edgeGatewayZones:
+                    description: EdgeGatewayZones defines a list of zones configured
+                      with an edge gateway. Used with ExternalLoadBalancer and UserSpecifiedEdgeGateway
+                      topologies.
+                    items:
+                      description: EdgeGatewayZone provides the details of a zone
+                        containing an edge gateway. Used with ExternalLoadBalancer
+                        topology. topology.
+                      properties:
+                        loadBalancerIP:
+                          description: LoadBalancerIP is the IP address of the load
+                            balancer configured on the edge gateway for this zone.
+                          type: string
+                        loadBalancerPort:
+                          description: LoadBalancerPort is the port of the load balancer
+                            configured on the edge gateway for this zone.
+                          type: integer
+                        name:
+                          description: Name is the user-defined name of the zone representing
+                            the OVDC containing an edge gateway.
+                          type: string
+                      required:
+                      - loadBalancerIP
+                      - loadBalancerPort
+                      - name
+                      type: object
+                    type: array
+                  zones:
+                    description: Zones defines the list of zones this cluster is configured
+                      with for a Mult-AZ deployment.
+                    items:
+                      description: Zone is an Availability Zone in VCD
+                      properties:
+                        controlPlaneZone:
+                          default: false
+                          description: ControlPlaneZone defines whether a control
+                            plane node can be deployed to this zone.
+                          type: boolean
+                        name:
+                          description: Name defines the name of this zone.
+                          type: string
+                        ovdcName:
+                          description: OVDCName defines the actual name of the OVDC
+                            which corresponds to this zone.
+                          type: string
+                        ovdcNetworkName:
+                          description: OVDCNetworkName defines the OVDC network for
+                            this zone.
+                          type: string
+                      required:
+                      - controlPlaneZone
+                      - name
+                      - ovdcName
+                      - ovdcNetworkName
+                      type: object
+                    type: array
                 type: object
               org:
                 description: optional
@@ -882,40 +1012,6 @@ spec:
                       required:
                       - id
                       - name
-                      type: object
-                    type: array
-                type: object
-              zoneDetails:
-                description: ZoneDetailsStatus
-                properties:
-                  userSpecifiedEdgeGateway:
-                    type: string
-                  userSpecifiedEdgeGatewayZone:
-                    type: string
-                  zoneType:
-                    type: string
-                  zones:
-                    items:
-                      description: Zone is an Availability Zone in VCD
-                      properties:
-                        controlPlaneZone:
-                          default: false
-                          type: boolean
-                        loadBalancerIP:
-                          type: string
-                        loadBalancerPort:
-                          type: integer
-                        name:
-                          type: string
-                        ovdcName:
-                          type: string
-                        ovdcNetworkName:
-                          type: string
-                      required:
-                      - controlPlaneZone
-                      - name
-                      - ovdcName
-                      - ovdcNetworkName
                       type: object
                     type: array
                 type: object
