--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -561,7 +561,100 @@ spec:
                   vipSubnet:
                     type: string
                 type: object
+              multiZoneSpec:
+                description: MultiZoneSpec provides details of the configuration of
+                  the zones in the cluster as well as the NetworkTopologyType used.
+                properties:
+                  UserSpecifiedEdgeGatewayConfig:
+                    description: UserSpecifiedEdgeGatewayConfig contains configuration
+                      for UserSpecifiedEdgeGateway zone topology.
+                    properties:
+                      edgeGatewayZone:
+                        description: EdgeGatewayZone defines the name of the user-provided
+                          zone containing an edge gateway.
+                        type: string
+                    required:
+                    - edgeGatewayZone
+                    type: object
+                  ZoneTopology:
+                    description: ZoneTopology defines the type of network topology
+                      used across zones in a Multi-AZ deployment. Valid options are
+                      DCGroup, UserSpecifiedEdgeGateway, and ExternalLoadBalancer,
+                    type: string
+                  dcGroupConfig:
+                    description: DCGroupConfig contains configuration for DCGroup
+                      zone topology.
+                    type: object
+                  externalLoadBalancerConfig:
+                    description: ExternalLoadBalancerConfig contains configuration
+                      for ExternalLoadBalancer zone topology.
+                    properties:
+                      edgeGatewayZones:
+                        description: EdgeGatewayZones defines a list of zones containing
+                          an edge gateway.
+                        items:
+                          description: EdgeGatewayZone provides the details of a zone
+                            containing an edge gateway. Used with ExternalLoadBalancer
+                            topology. topology.
+                          properties:
+                            loadBalancerIP:
+                              description: LoadBalancerIP is the IP address of the
+                                load balancer configured on the edge gateway for this
+                                zone.
+                              type: string
+                            loadBalancerPort:
+                              description: LoadBalancerPort is the port of the load
+                                balancer configured on the edge gateway for this zone.
+                              type: integer
+                            name:
+                              description: Name is the user-defined name of the zone
+                                representing the OVDC containing an edge gateway.
+                              type: string
+                          required:
+                          - loadBalancerIP
+                          - loadBalancerPort
+                          - name
+                          type: object
+                        type: array
+                    required:
+                    - edgeGatewayZones
+                    type: object
+                  zones:
+                    description: Zones defines the list of zones that this cluster
+                      should be deployed to.
+                    items:
+                      description: Zone is an Availability Zone in VCD
+                      properties:
+                        controlPlaneZone:
+                          default: false
+                          description: ControlPlaneZone defines whether a control
+                            plane node can be deployed to this zone.
+                          type: boolean
+                        name:
+                          description: Name defines the name of this zone.
+                          type: string
+                        ovdcName:
+                          description: OVDCName defines the actual name of the OVDC
+                            which corresponds to this zone.
+                          type: string
+                        ovdcNetworkName:
+                          description: OVDCNetworkName defines the OVDC network for
+                            this zone.
+                          type: string
+                      required:
+                      - controlPlaneZone
+                      - name
+                      - ovdcName
+                      - ovdcNetworkName
+                      type: object
+                    type: array
+                type: object
               org:
+                type: string
+              ovcdZoneConfigMap:
+                description: OVDCZoneConfigMap defines the name of a config map storing
+                  the mapping Zone -> OVDC in a Multi-AZ deployment. e.g. zone1 ->
+                  ovdc1, zone2 -> ovdc2
                 type: string
               ovdc:
                 type: string
@@ -646,6 +739,27 @@ spec:
                   - type
                   type: object
                 type: array
+              failureDomains:
+                additionalProperties:
+                  description: FailureDomainSpec is the Schema for Cluster API failure
+                    domains. It allows controllers to understand how many failure
+                    domains a cluster can optionally span across.
+                  properties:
+                    attributes:
+                      additionalProperties:
+                        type: string
+                      description: Attributes is a free form map of attributes an
+                        infrastructure provider might use or require.
+                      type: object
+                    controlPlane:
+                      description: ControlPlane determines if this failure domain
+                        is suitable for use by control plane machines.
+                      type: boolean
+                  type: object
+                description: FailureDomains lists the zones of this cluster. This
+                  field is parsed from the Zones field of vcdCluster.MultiZoneSpec
+                  if set up appropriately.
+                type: object
               infraId:
                 type: string
               loadBalancerConfig:
@@ -656,6 +770,76 @@ spec:
                     type: boolean
                   vipSubnet:
                     type: string
+                type: object
+              multiZoneStatus:
+                description: MultiZoneStatus provides the current status of the multi-zone
+                  configuration in a Multi-AZ deployment
+                properties:
+                  ZoneTopology:
+                    description: ZoneTopology defines the type of network topology
+                      used across zones in a Multi-AZ deployment. Valid options are
+                      DCGroup, UserSpecifiedEdgeGateway, and ExternalLoadBalancer
+                    type: string
+                  edgeGateway:
+                    description: EdgeGateway defines the edge gateway in a UserSpecifiedEdge
+                      topology.
+                    type: string
+                  edgeGatewayZones:
+                    description: EdgeGatewayZones defines a list of zones configured
+                      with an edge gateway. Used with ExternalLoadBalancer and UserSpecifiedEdgeGateway
+                      topologies.
+                    items:
+                      description: EdgeGatewayZone provides the details of a zone
+                        containing an edge gateway. Used with ExternalLoadBalancer
+                        topology. topology.
+                      properties:
+                        loadBalancerIP:
+                          description: LoadBalancerIP is the IP address of the load
+                            balancer configured on the edge gateway for this zone.
+                          type: string
+                        loadBalancerPort:
+                          description: LoadBalancerPort is the port of the load balancer
+                            configured on the edge gateway for this zone.
+                          type: integer
+                        name:
+                          description: Name is the user-defined name of the zone representing
+                            the OVDC containing an edge gateway.
+                          type: string
+                      required:
+                      - loadBalancerIP
+                      - loadBalancerPort
+                      - name
+                      type: object
+                    type: array
+                  zones:
+                    description: Zones defines the list of zones this cluster is configured
+                      with for a Mult-AZ deployment.
+                    items:
+                      description: Zone is an Availability Zone in VCD
+                      properties:
+                        controlPlaneZone:
+                          default: false
+                          description: ControlPlaneZone defines whether a control
+                            plane node can be deployed to this zone.
+                          type: boolean
+                        name:
+                          description: Name defines the name of this zone.
+                          type: string
+                        ovdcName:
+                          description: OVDCName defines the actual name of the OVDC
+                            which corresponds to this zone.
+                          type: string
+                        ovdcNetworkName:
+                          description: OVDCNetworkName defines the OVDC network for
+                            this zone.
+                          type: string
+                      required:
+                      - controlPlaneZone
+                      - name
+                      - ovdcName
+                      - ovdcNetworkName
+                      type: object
+                    type: array
                 type: object
               org:
                 description: optional
@@ -2056,6 +2240,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: capvcd-system/capvcd-serving-cert
+  creationTimestamp: null
   labels:
     cluster.x-k8s.io/provider: infrastructure-vcd
   name: capvcd-mutating-webhook-configuration
@@ -2106,6 +2291,7 @@ kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: capvcd-system/capvcd-serving-cert
+  creationTimestamp: null
   labels:
     cluster.x-k8s.io/provider: infrastructure-vcd
   name: capvcd-validating-webhook-configuration
