logic for getting correct ovdc

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
@@ -549,6 +549,8 @@ spec:
                   type: string
                 type: array
               failureDomain:
+                description: FailureDomain is the failure domain the machine will
+                  be created in.
                 type: string
               placementPolicy:
                 description: PlacementPolicy is the placement policy to be used on
