--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
@@ -381,6 +381,8 @@ spec:
                           type: string
                         type: array
                       failureDomain:
+                        description: FailureDomain is the failure domain the machine
+                          will be created in.
                         type: string
                       placementPolicy:
                         description: PlacementPolicy is the placement policy to be
