logic for getting correct ovdc

--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -1785,6 +1785,8 @@ spec:
                   type: string
                 type: array
               failureDomain:
+                description: FailureDomain is the failure domain the machine will
+                  be created in.
                 type: string
               placementPolicy:
                 description: PlacementPolicy is the placement policy to be used on
@@ -2319,6 +2321,8 @@ spec:
                           type: string
                         type: array
                       failureDomain:
+                        description: FailureDomain is the failure domain the machine
+                          will be created in.
                         type: string
                       placementPolicy:
                         description: PlacementPolicy is the placement policy to be
