--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -1,3 +1,4 @@
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -236,7 +237,6 @@ spec:
                           secret name must be unique.
                         type: string
                     type: object
-                    x-kubernetes-map-type: atomic
                   username:
                     type: string
                 type: object
@@ -455,7 +455,6 @@ spec:
                           secret name must be unique.
                         type: string
                     type: object
-                    x-kubernetes-map-type: atomic
                   username:
                     type: string
                 type: object
@@ -789,7 +788,6 @@ spec:
                           secret name must be unique.
                         type: string
                     type: object
-                    x-kubernetes-map-type: atomic
                   username:
                     type: string
                 type: object
@@ -1044,3 +1042,9 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
