--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
@@ -1,3 +1,4 @@
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -548,6 +549,8 @@ spec:
                 items:
                   type: string
                 type: array
+              failureDomain:
+                type: string
               placementPolicy:
                 description: PlacementPolicy is the placement policy to be used on
                   this machine.
@@ -681,3 +684,9 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
