--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -259,7 +259,6 @@ spec:
                           secret name must be unique.
                         type: string
                     type: object
-                    x-kubernetes-map-type: atomic
                   username:
                     type: string
                 type: object
@@ -478,7 +477,6 @@ spec:
                           secret name must be unique.
                         type: string
                     type: object
-                    x-kubernetes-map-type: atomic
                   username:
                     type: string
                 type: object
@@ -677,22 +675,6 @@ spec:
                 description: MultiZoneSpec provides details of the configuration of
                   the zones in the cluster as well as the NetworkTopologyType used.
                 properties:
-                  UserSpecifiedEdgeGatewayConfig:
-                    description: UserSpecifiedEdgeGatewayConfig contains configuration
-                      for UserSpecifiedEdgeGateway zone topology.
-                    properties:
-                      edgeGatewayZone:
-                        description: EdgeGatewayZone defines the name of the user-provided
-                          zone containing an edge gateway.
-                        type: string
-                    required:
-                    - edgeGatewayZone
-                    type: object
-                  ZoneTopology:
-                    description: ZoneTopology defines the type of network topology
-                      used across zones in a Multi-AZ deployment. Valid options are
-                      DCGroup, UserSpecifiedEdgeGateway, and ExternalLoadBalancer,
-                    type: string
                   dcGroupConfig:
                     description: DCGroupConfig contains configuration for DCGroup
                       zone topology.
@@ -731,6 +713,22 @@ spec:
                     required:
                     - edgeGatewayZones
                     type: object
+                  userSpecifiedEdgeGatewayConfig:
+                    description: UserSpecifiedEdgeGatewayConfig contains configuration
+                      for UserSpecifiedEdgeGateway zone topology.
+                    properties:
+                      edgeGatewayZone:
+                        description: EdgeGatewayZone defines the name of the user-provided
+                          zone containing an edge gateway.
+                        type: string
+                    required:
+                    - edgeGatewayZone
+                    type: object
+                  zoneTopology:
+                    description: ZoneTopology defines the type of network topology
+                      used across zones in a Multi-AZ deployment. Valid options are
+                      DCGroup, UserSpecifiedEdgeGateway, and ExternalLoadBalancer,
+                    type: string
                   zones:
                     description: Zones defines the list of zones that this cluster
                       should be deployed to.
@@ -812,7 +810,6 @@ spec:
                           secret name must be unique.
                         type: string
                     type: object
-                    x-kubernetes-map-type: atomic
                   username:
                     type: string
                 type: object
@@ -889,7 +886,7 @@ spec:
                       type: boolean
                   type: object
                 description: FailureDomains lists the zones of this cluster. This
-                  field is parsed from the Zones field of vcdCluster.MultiZoneSpec
+                  field is parsed from the Zones field of vcdCluster.Spec.MultiZoneSpec
                   if set up appropriately.
                 type: object
               infraId:
@@ -909,42 +906,60 @@ spec:
                 description: MultiZoneStatus provides the current status of the multi-zone
                   configuration in a Multi-AZ deployment
                 properties:
-                  ZoneTopology:
+                  dcGroupConfig:
+                    description: DCGroupConfig contains configuration for DCGroup
+                      zone topology.
+                    type: object
+                  externalLoadBalancerConfig:
+                    description: ExternalLoadBalancerConfig contains configuration
+                      for ExternalLoadBalancer zone topology.
+                    properties:
+                      edgeGatewayZones:
+                        description: EdgeGatewayZones defines a list of zones containing
+                          an edge gateway.
+                        items:
+                          description: EdgeGatewayZone provides the details of a zone
+                            containing an edge gateway. Used with ExternalLoadBalancer
+                            topology. topology.
+                          properties:
+                            loadBalancerIP:
+                              description: LoadBalancerIP is the IP address of the
+                                load balancer configured on the edge gateway for this
+                                zone.
+                              type: string
+                            loadBalancerPort:
+                              description: LoadBalancerPort is the port of the load
+                                balancer configured on the edge gateway for this zone.
+                              type: integer
+                            name:
+                              description: Name is the user-defined name of the zone
+                                representing the OVDC containing an edge gateway.
+                              type: string
+                          required:
+                          - loadBalancerIP
+                          - loadBalancerPort
+                          - name
+                          type: object
+                        type: array
+                    required:
+                    - edgeGatewayZones
+                    type: object
+                  userSpecifiedEdgeGatewayConfig:
+                    description: UserSpecifiedEdgeGatewayConfig contains configuration
+                      for UserSpecifiedEdgeGateway zone topology.
+                    properties:
+                      edgeGatewayZone:
+                        description: EdgeGatewayZone defines the name of the user-provided
+                          zone containing an edge gateway.
+                        type: string
+                    required:
+                    - edgeGatewayZone
+                    type: object
+                  zoneTopology:
                     description: ZoneTopology defines the type of network topology
                       used across zones in a Multi-AZ deployment. Valid options are
                       DCGroup, UserSpecifiedEdgeGateway, and ExternalLoadBalancer
                     type: string
-                  edgeGateway:
-                    description: EdgeGateway defines the edge gateway in a UserSpecifiedEdge
-                      topology.
-                    type: string
-                  edgeGatewayZones:
-                    description: EdgeGatewayZones defines a list of zones configured
-                      with an edge gateway. Used with ExternalLoadBalancer and UserSpecifiedEdgeGateway
-                      topologies.
-                    items:
-                      description: EdgeGatewayZone provides the details of a zone
-                        containing an edge gateway. Used with ExternalLoadBalancer
-                        topology. topology.
-                      properties:
-                        loadBalancerIP:
-                          description: LoadBalancerIP is the IP address of the load
-                            balancer configured on the edge gateway for this zone.
-                          type: string
-                        loadBalancerPort:
-                          description: LoadBalancerPort is the port of the load balancer
-                            configured on the edge gateway for this zone.
-                          type: integer
-                        name:
-                          description: Name is the user-defined name of the zone representing
-                            the OVDC containing an edge gateway.
-                          type: string
-                      required:
-                      - loadBalancerIP
-                      - loadBalancerPort
-                      - name
-                      type: object
-                    type: array
                   zones:
                     description: Zones defines the list of zones this cluster is configured
                       with for a Mult-AZ deployment.
@@ -1049,6 +1064,12 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -1176,7 +1197,6 @@ spec:
                                   the secret name must be unique.
                                 type: string
                             type: object
-                            x-kubernetes-map-type: atomic
                           username:
                             type: string
                         type: object
@@ -1198,6 +1218,12 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -1765,6 +1791,8 @@ spec:
                 items:
                   type: string
                 type: array
+              failureDomain:
+                type: string
               placementPolicy:
                 description: PlacementPolicy is the placement policy to be used on
                   this machine.
@@ -1898,6 +1926,12 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -2297,6 +2331,8 @@ spec:
                         items:
                           type: string
                         type: array
+                      failureDomain:
+                        type: string
                       placementPolicy:
                         description: PlacementPolicy is the placement policy to be
                           used on this machine.
@@ -2339,6 +2375,12 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -2391,6 +2433,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  creationTimestamp: null
   labels:
     cluster.x-k8s.io/provider: infrastructure-vcd
   name: capvcd-manager-role
@@ -2691,7 +2734,6 @@ kind: MutatingWebhookConfiguration
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: capvcd-system/capvcd-serving-cert
-  creationTimestamp: null
   labels:
     cluster.x-k8s.io/provider: infrastructure-vcd
   name: capvcd-mutating-webhook-configuration
@@ -2742,7 +2784,6 @@ kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: capvcd-system/capvcd-serving-cert
-  creationTimestamp: null
   labels:
     cluster.x-k8s.io/provider: infrastructure-vcd
   name: capvcd-validating-webhook-configuration
