[CAFV-361] Add DCGroup Multi-AZ topology (#595)
* initial commit to add dc group multi-az topology

* Add const SingleZone and FailureDomain to the vcdMachine spec

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* use ovdcName as a parameter to populate vcdClient

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* regenerate manifests after rebase

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* Address review comments and tested single zone cluster creation

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* address review comments

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* regenerate conversions

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

---------

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
@@ -380,6 +380,8 @@ spec:
                         items:
                           type: string
                         type: array
+                      failureDomain:
+                        type: string
                       placementPolicy:
                         description: PlacementPolicy is the placement policy to be
                           used on this machine.
