--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
@@ -548,6 +548,8 @@ spec:
                 items:
                   type: string
                 type: array
+              failureDomain:
+                type: string
               placementPolicy:
                 description: PlacementPolicy is the placement policy to be used on
                   this machine.
