--- a/templates/cluster-template-v1.26.11-tkgv2.5.0-crs.yaml
+++ b/templates/cluster-template-v1.26.11-tkgv2.5.0-crs.yaml
@@ -8,7 +8,7 @@ metadata:
     ccm: external
     csi: external
     cluster-role.tkg.tanzu.vmware.com/management: ""
-    tanzuKubernetesRelease: "v1.26.11---vmware.1-tkg.1-rc.5"
+    tanzuKubernetesRelease: "v1.26.11---vmware.1-tkg.1"
     tkg.tanzu.vmware.com/cluster-name: ${CLUSTER_NAME}
 spec:
   clusterNetwork:
